--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{% url 'products' %}?sort=price&direction=asc">By Price</a>
-              <a class="dropdown-item" href="{% url 'products' %}?sort=rating&direction=desc">By Rating</a>
+              <a class="dropdown-item" href="{% url 'products' %}?sort=rating&direction=asc">By Rating</a>
               <a class="dropdown-item" href="{% url 'products' %}?sort=category&direction=asc">By Category</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="{% url 'products' %}">All Products</a>
