--- a/contact_us/templates/contact_us/contact_us.html
+++ b/contact_us/templates/contact_us/contact_us.html
@@ -1,1 +1,16 @@
-<h1>Contact us</h1>
+{% extends "base.html" %}
+{% load static %}
+{% load crispy_forms_tags %}
+{% block content %}
+
+
+<div class="overlay"></div>
+<div class="container mb-2">
+    <div class="row">
+        <div class="col">
+            <hr />
+            <h2 class="logo-font mb-4">Contact Us</h2>
+            <hr />
+        </div>
+    </div>
+    {% endblock %}
