alter contact us view and contact_us.html to diplay form

--- a/contact_us/templates/contact_us/contact_us.html
+++ b/contact_us/templates/contact_us/contact_us.html
@@ -11,6 +11,11 @@
             <hr />
             <h2 class="logo-font mb-4">Contact Us</h2>
             <hr />
+            <form action="" method="post">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <input type="submit" value="Submit">
+            </form>
         </div>
     </div>
     {% endblock %}
