make changes to checkout success page

--- a/contact_us/templates/contact_us/contact_success.html
+++ b/contact_us/templates/contact_us/contact_success.html
@@ -13,7 +13,7 @@
             <h2 class="logo-font mb-4">Thank you for your inquiry</h2>
             <hr />
             <p class="text-black">
-                Your contact information and message was successfully submitted.
+                Your contact information and message was successfully submitted. Our team will be in contact soon.
             </p>
         </div>
     </div>
