removed unneeded css from base.css

--- a/templates/404.html
+++ b/templates/404.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block content %}
 
-<div class="overlay"></div>
-<div class="jumbotron">
+
+<div class="jumbotron" style="z-index: -1;">
     <h1 class="display-4">Page Not Found</h1>
     <p class="lead">Sorry, This page is missing or does not exist</p>
     <hr class="my-4">
