--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -42,7 +42,7 @@ select option[value=""] {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(23, 162, 184, .85);
+  background: rgba(54, 76, 80, 0.85);
   z-index: 9999;
 }
 
