--- a/templates/404.html
+++ b/templates/404.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 
-<div class="jumbotron" style="z-index: -1;">
+<div class="jumbotron">
     <h1 class="display-4">Page Not Found</h1>
     <p class="lead">Sorry, This page is missing or does not exist</p>
     <hr class="my-4">
